--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
 .navbar-brand {
   padding-top: 25px;
 }
-.navbar-brand h1 { /* Restaurant name */
+.navbar-brand h1 {
   font-family: 'Lora', serif;
   color: #557c3e;
   font-size: 1.5em;
@@ -33,16 +33,17 @@ body {
   margin-bottom: 0;
   line-height: .75;
 }
-.navbar-brand a:hover, .navbar-brand a:focus {
+.navbar-brand a:hover,
+.navbar-brand a:focus {
   text-decoration: none;
 }
-.navbar-brand p { /* Kosher cert */
+.navbar-brand p {
   color: #000;
   text-transform: uppercase;
   font-size: .7em;
   margin-top: 15px;
 }
-.navbar-brand p span { /* Star-K */
+.navbar-brand p span {
   vertical-align: middle;
 }
 
@@ -63,17 +64,18 @@ body {
 #phone {
   margin-top: 5px;
 }
-#phone a { /* Phone number */
+#phone a {
   text-align: right;
   padding-bottom: 0;
 }
-#phone div { /* We Deliver */
+#phone div {
   color: #557c3e;
   text-align: right;
   padding-right: 15px;
 }
 
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+.navbar-header button.navbar-toggle,
+.navbar-header .icon-bar {
   border: 1px solid #61122f;
 }
 .navbar-header button.navbar-toggle {
@@ -113,13 +115,46 @@ body {
 /* END FOOTER */
 
 
-
 /* HOME PAGE */
-.container .jumbotron {
-  box-shadow: 0 0 50px #3F0C1F;
-  border: 2px solid #3F0C1F;
+
+/* Hero Image */
+#home-tiles + .text-center img,
+.text-center img.hero {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  border-radius: 8px;
 }
 
+/* Updated Tile Layout */
+#home-tiles {
+  margin-top: 30px;
+}
+#home-tiles .category-tile {
+  margin: 20px 0;
+  padding: 10px;
+  background-color: #871f4b;
+  border: 1px solid #700f38;
+  border-radius: 6px;
+  transition: transform 0.2s ease;
+}
+#home-tiles .category-tile:hover {
+  transform: scale(1.02);
+  background-color: #9c275f;
+}
+#home-tiles .category-tile img {
+  margin-bottom: 10px;
+  border-radius: 6px;
+}
+#home-tiles .category-tile span {
+  display: block;
+  font-size: 1.4em;
+  font-weight: bold;
+  color: #fff;
+  margin-top: 5px;
+  text-transform: uppercase;
+}
+
+/* Background Tiles (legacy compatibility) */
 #menu-tile, #specials-tile, #map-tile {
   height: 250px;
   width: 100%;
@@ -151,10 +186,20 @@ body {
   color: #fff;
   opacity: .8;
 }
-/* END HOME PAGE */
+
+/* Responsive Images */
+.img-responsive {
+  width: 100%;
+  height: auto;
+}
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /* MENU CATEGORIES PAGE */
-.category-tile { 
+.category-tile {
   position: relative;
   border: 2px solid #3F0C1F;
   overflow: hidden;
@@ -177,11 +222,9 @@ body {
 .category-tile:hover {
   box-shadow: 0 1px 5px 1px #cccccc;
 }
-
 #menu-categories-title + div {
   margin-bottom: 50px;
 }
-/* END MENU CATEGORIES PAGE */
 
 /* SINGLE CATEGORY PAGE */
 .menu-item-tile {
@@ -201,7 +244,7 @@ body {
 }
 .menu-item-photo {
   position: relative;
-  border: 2px solid #3F0C1F; 
+  border: 2px solid #3F0C1F;
   overflow: hidden;
   padding: 0;
   margin-right: -15px;
@@ -227,7 +270,6 @@ h3.menu-item-title {
   font-size: .9em;
   font-style: italic;
 }
-/* END SINGLE CATEGORY PAGE */
 
 
 /********** Large devices only **********/
@@ -240,56 +282,48 @@ h3.menu-item-title {
 
 /********** Medium devices only **********/
 @media (min-width: 992px) and (max-width: 1199px) {
-  /* Header */
   #logo-img {
     background: url('../images/restaurant-logo_medium.png') no-repeat;
     width: 100px;
     height: 100px;
     margin: 5px 5px 5px 0;
   }
-  /* End Header */
-
-  /* Home Page */
   .container .jumbotron {
     background: url('../images/jumbotron_992.jpg') no-repeat;
     height: 558px;
   }
-  /* End Home Page */
 }
 
 /********** Small devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-  /* Home Page */
   .container .jumbotron {
     background: url('../images/jumbotron_768.jpg') no-repeat;
     height: 432px;
   }
-  /* End Home Page */
 }
 
 /********** Extra small devices only **********/
 @media (max-width: 767px) {
-  /* Header */
   .navbar-brand {
     padding-top: 10px;
     height: 80px;
   }
-  .navbar-brand h1 { /* Restaurant name */
+  .navbar-brand h1 {
     padding-top: 10px;
-    font-size: 5vw; /* 1vw = 1% of viewport width */
+    font-size: 5vw;
   }
-  .navbar-brand p { /* Kosher cert */
+  .navbar-brand p {
     font-size: .6em;
     margin-top: 12px;
   }
-  .navbar-brand p img { /* Star-K */
+  .navbar-brand p img {
     height: 20px;
   }
 
-  #collapsable-nav a { /* Collapsed nav menu text */
+  #collapsable-nav a {
     font-size: 1.2em;
   }
-  #collapsable-nav a span { /* Collapsed nav menu glyph */
+  #collapsable-nav a span {
     font-size: 1em;
     margin-right: 5px;
   }
@@ -303,28 +337,25 @@ h3.menu-item-title {
     background-color: #f6b319;
     color: #951c49;
   }
+
   #xs-deliver {
     margin-top: 5px;
     font-size: .7em;
     letter-spacing: .1em;
     text-transform: uppercase;
   }
-  /* End Header */
 
-  /* Footer */
   .panel-footer section {
     margin-bottom: 30px;
     text-align: center;
   }
   .panel-footer section:nth-child(3) {
-    margin-bottom: 0; /* margin already exists on the whole row */
+    margin-bottom: 0;
   }
   .panel-footer section hr {
     width: 50%;
   }
-  /* End Footer */
 
-  /* Home Page */
   .container .jumbotron {
     margin-top: 30px;
     padding: 0;
@@ -341,21 +372,17 @@ h3.menu-item-title {
     text-align: center;
   }
   .menu-item-description {
-    text-align: center;;
+    text-align: center;
   }
 }
 
-
-/********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
+/********** Super extra small devices Only **********/
 @media (max-width: 479px) {
-  /* Header */
-  .navbar-brand h1 { /* Restaurant name */
+  .navbar-brand h1 {
     padding-top: 5px;
     font-size: 6vw;
   }
-  /* End Header */
-  
-  /* Home page */
+
   #menu-tile, #specials-tile {
     width: 280px;
     margin: 0 auto 15px;
@@ -370,6 +397,3 @@ h3.menu-item-title {
     width: 100%;
   }
 }
-
-
-
